refactor(security): Optimize file write and response key loading logic in the authentication service